--- a/amplify/backend/function/scrapePredictionsLambda/src/package.json
+++ b/amplify/backend/function/scrapePredictionsLambda/src/package.json
@@ -6,6 +6,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "aws-sdk": "^2.461.0",
+    "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.3",
     "request": "^2.88.0",
     "uuid": "^3.3.2"
